feat: progressive disclosure refactor — 57% token reduction
Split all 106 skills using the progressive disclosure pattern from
Anthropic best practices + agentskills.io spec:

SKILL.md: Core sections only (routing, ground rules, workflow, etc.)
references/: Anti-patterns, best practices, error decoder, checklists,
  footguns, calibration, scale depth, sub-skills, and domain-specific content

Results:
- Avg body: 9,625 → 4,204 words (57% reduction)
- Max body: 19,187 → 8,138 words
- >5000 words: 97 → 9 skills
- >500 lines: many → 1 skill
- 1,090 reference files created across 106 skill directories
- Core Workflow splits for 54 skills with oversized implementations
- Domain-specific sections moved to references/ for 13 skills
- Fixed: 4 dashes/6 dashes frontmatter YAML separators
- Fixed: duplicate 'Routing — Auto-Route' → 'Route the Request' merging

Architecture follows Anthropic Pattern 1 (high-level guide with references)
and Pattern 2 (domain-specific organization). All references are one level
deep from SKILL.md.